--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha \"test/**/*.test.js\"",
     "test:html": "mocha \"test/**/*.test.js\" --reporter mochawesome --reporter-options reportDir=reports,reportFilename=kc-report,quiet=true",
-    "test:junit": "mocha \"test/**/*.test.js\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml"
+    "test:junit": "mocha \"test/**/*.test.js\" --grep \"\\[AMAZON\\]\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml"
   },
   "keywords": [],
   "author": "",
