Clean up Jenkins console output for better readability
- Added visual separators (━━━) and emojis for each stage
- Added ansiColor plugin support for colored output
- Suppressed npm ci verbose output with --quiet flag
- Added test result summary in post-build section
- Added success/failure status messages
- Cleaner stage headers with clear visual separation

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha \"test/**/*.test.js\"",
-    "test:junit": "mocha \"test/**/*.test.js\" --grep \"\\[AMAZON\\]\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml,quiet=true",
+    "test:junit": "mocha \"test/**/*.test.js\" --grep \"\\[AMAZON\\]\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml,quiet=true 2>&1 | grep -v 'deprecation\\|npm WARN'",
     "test:html": "mocha \"test/**/*.test.js\" --grep \"\\[AMAZON\\]\" --reporter mochawesome --reporter-options reportDir=reports,reportFilename=kc-report,quiet=true"
   },
   "keywords": [],
