Migrate from tag-based to folder-based test organization
- Created test/amazon/ and test/smoke/ folders
- Moved amazonNav.test.js → test/amazon/navigation.test.js
- Moved sampleLogin.test.js → test/smoke/login.test.js
- Removed [AMAZON] and [SMOKE] tags from test names
- Updated package.json with folder-based scripts (test:amazon, test:smoke)
- Added suite+reporter combo scripts (test:amazon:junit, test:amazon:html)
- Updated Jenkinsfile to use new folder-based scripts
- Removed old test/ui/ directory

This matches the work-style folder organization pattern.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha \"test/**/*.test.js\"",
-    "test:junit": "mocha \"test/**/*.test.js\" --grep \"\\[AMAZON\\]\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml,quiet=true 2>&1 | grep -v 'deprecation\\|npm WARN'",
-    "test:html": "mocha \"test/**/*.test.js\" --grep \"\\[AMAZON\\]\" --reporter mochawesome --reporter-options reportDir=reports,reportFilename=kc-report,quiet=true"
+    "test:amazon": "mocha \"test/amazon/**/*.test.js\"",
+    "test:smoke": "mocha \"test/smoke/**/*.test.js\"",
+    "test:amazon:junit": "mocha \"test/amazon/**/*.test.js\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml,quiet=true",
+    "test:amazon:html": "mocha \"test/amazon/**/*.test.js\" --reporter mochawesome --reporter-options reportDir=reports,reportFilename=amazon-report,quiet=true",
+    "test:smoke:junit": "mocha \"test/smoke/**/*.test.js\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml,quiet=true",
+    "test:smoke:html": "mocha \"test/smoke/**/*.test.js\" --reporter mochawesome --reporter-options reportDir=reports,reportFilename=smoke-report,quiet=true"
   },
   "keywords": [],
   "author": "",
