--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "mocha \"test/**/*.test.js\"",
     "test:amazon": "mocha \"test/amazon/**/*.test.js\"",
     "test:smoke": "mocha \"test/smoke/**/*.test.js\"",
+    "test:amazon:report": "mocha \"test/amazon/**/*.test.js\" --reporter mocha-multi-reporters --reporter-options configFile=mocha-reporter-config.json",
+    "test:smoke:report": "mocha \"test/smoke/**/*.test.js\" --reporter mocha-multi-reporters --reporter-options configFile=mocha-reporter-config.json",
     "test:amazon:junit": "mocha \"test/amazon/**/*.test.js\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml,quiet=true",
     "test:amazon:html": "mocha \"test/amazon/**/*.test.js\" --reporter mochawesome --reporter-options reportDir=reports,reportFilename=amazon-report,quiet=true",
     "test:smoke:junit": "mocha \"test/smoke/**/*.test.js\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml,quiet=true",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "mocha-junit-reporter": "^2.2.1",
+    "mocha-multi-reporters": "^1.5.1",
     "mochawesome": "^7.1.4"
   }
 }
