--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "test": "mocha \"test/**/*.test.js\"",
     "test:amazon": "mocha \"test/amazon/**/*.test.js\"",
     "test:smoke": "mocha \"test/smoke/**/*.test.js\"",
+    "test:target": "mocha \"test/target/**/*.test.js\"",
+    "test:walmart": "mocha \"test/walmart/**/*.test.js\"",
+    "test:bestbuy": "mocha \"test/bestbuy/**/*.test.js\"",
+    "test:ebay": "mocha \"test/ebay/**/*.test.js\"",
     "test:amazon:report": "mocha \"test/amazon/**/*.test.js\" --reporter mocha-multi-reporters --reporter-options configFile=mocha-reporter-config.json",
     "test:smoke:report": "mocha \"test/smoke/**/*.test.js\" --reporter mocha-multi-reporters --reporter-options configFile=mocha-reporter-config.json",
+    "test:target:report": "mocha \"test/target/**/*.test.js\" --reporter mocha-multi-reporters --reporter-options configFile=mocha-reporter-config.json",
+    "test:walmart:report": "mocha \"test/walmart/**/*.test.js\" --reporter mocha-multi-reporters --reporter-options configFile=mocha-reporter-config.json",
+    "test:bestbuy:report": "mocha \"test/bestbuy/**/*.test.js\" --reporter mocha-multi-reporters --reporter-options configFile=mocha-reporter-config.json",
+    "test:ebay:report": "mocha \"test/ebay/**/*.test.js\" --reporter mocha-multi-reporters --reporter-options configFile=mocha-reporter-config.json",
     "test:amazon:junit": "mocha \"test/amazon/**/*.test.js\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml,quiet=true",
     "test:amazon:html": "mocha \"test/amazon/**/*.test.js\" --reporter mochawesome --reporter-options reportDir=reports,reportFilename=amazon-report,quiet=true",
     "test:smoke:junit": "mocha \"test/smoke/**/*.test.js\" --reporter mocha-junit-reporter --reporter-options mochaFile=reports/junit.xml,quiet=true",
